--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Random Quran</title>
   </head>
   <body>
-  -->This is nothing
+  <!-- This is a comment. It will not be displayed in the browser. -->
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
